<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>

    <import type="android.view.View"/>

    <variable
        name="viewModel"
        type="com.hardik.mvvmapp.changepassword.viewmodel.ChangePasswordViewModel"
        />

  </data>

  <LinearLayout
      android:id="@+id/llRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".login.view.LoginActivity"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="@dimen/_5sdp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="@dimen/_5sdp"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        >

      <ImageView
          android:id="@+id/imgBack"
          android:layout_width="@dimen/_28sdp"
          android:layout_height="@dimen/_28sdp"
          android:layout_gravity="center|start"
          android:contentDescription="@string/app_name"
          android:onClick="@{() -> viewModel.onBackClick()}"
          android:padding="@dimen/_5sdp"
          android:src="@drawable/ico_back_arrow"
          />

      <TextView
          android:id="@+id/txtTitle"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:fontFamily="@font/kreon_regular"
          android:gravity="center"
          android:padding="@dimen/_5sdp"
          android:text="@string/str_change_password"
          android:textColor="@color/colorWhite"
          android:textSize="@dimen/_14sdp"
          />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        >

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtCurrentPassword"
          android:layout_marginTop="@dimen/_10sdp"
          android:hint="@string/str_current_password"
          android:inputType="textPassword"
          android:nextFocusDown="@+id/edtZipCode"
          style="@style/editText"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtNewPassword"
          android:layout_marginTop="@dimen/_10sdp"
          android:hint="@string/str_new_password"
          android:inputType="textPassword"
          android:nextFocusDown="@+id/edtZipCode"
          style="@style/editText"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtNewPasswordAgain"
          android:layout_marginTop="@dimen/_10sdp"
          android:hint="@string/str_new_password_again"
          android:inputType="textPassword"
          android:nextFocusDown="@+id/edtZipCode"
          style="@style/editText"
          />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="@dimen/_165sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/btn_shadow_red_selected"
        android:fontFamily="@font/kreon_bold"
        android:onClick="@{() -> viewModel.onChangePasswordClick()}"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_change_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        />

  </LinearLayout>

</layout>