<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="com.hardik.mvvmapp.home.viewmodel.HomeViewModel" />

  </data>

  <androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/llRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".login.view.LoginActivity">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

        <TextView
          android:id="@+id/txtTitle"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:fontFamily="@font/kreon_regular"
          android:gravity="center"
          android:padding="@dimen/_5sdp"
          android:textColor="@color/colorWhite"
          android:textSize="@dimen/_14sdp" />

      </androidx.appcompat.widget.Toolbar>

      <fragment
        android:id="@+id/mainNavFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/main_navigation_graph" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
      android:id="@+id/navigationView"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:background="@color/colorWhite"
      android:theme="@style/NavigationDrawerStyle"
      app:headerLayout="@layout/nav_header"
      app:itemBackground="@drawable/drawer_item_bg"
      app:itemIconPadding="@dimen/_15sdp"
      app:itemIconTint="#777572"
      app:itemTextColor="@color/colorPrimaryDark"
      app:menu="@menu/menu_navigation" />

    <!--<com.google.android.material.navigation.NavigationView-->
    <!--android:id="@+id/navigationView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="start"-->
    <!--android:background="@color/colorWhite"-->
    <!--&gt;-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/colorWhite"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->

    <!--<include layout="@layout/nav_header"/>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@drawable/app_background"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->

    <!--<TableRow-->
    <!--android:id="@+id/homeFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_home"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_home"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuScanView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_scan"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_scan"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuBusinessFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_business"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_find"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuRedeemReward"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--android:visibility="gone"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_redeem_reward"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_redeem"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:id="@+id/redeemRewardDivider"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--android:visibility="gone"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/giftRewardFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--android:visibility="gone"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_gift_reward"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_gift"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:id="@+id/giftRewardDivider"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_2sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--android:visibility="gone"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuBrowseRewardFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_rewards"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_rewards"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/badgesFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_badges"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_badge"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/profileFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_24sdp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="@dimen/_15sdp"-->
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_profile"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_account"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--</LinearLayout>-->

    <!--</LinearLayout>-->

    <!--</com.google.android.material.navigation.NavigationView>-->

  </androidx.drawerlayout.widget.DrawerLayout>

</layout>