<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <import type="android.view.View"/>

    <variable
        name="viewModel"
        type="com.hardik.mvvmapp.fragment.badge.viewmodel.BadgesFragmentViewModel"
        />

  </data>

  <LinearLayout
      android:id="@+id/llRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/badgesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        />

  </LinearLayout>

</layout>