...
        android:layout_centerInParent="true"
        android:padding="@dimen/_10sdp"
        tools:src="@drawable/no_badge"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClose"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/_10sdp"
...
